Refactor app structure: add workout feature, remove contact and hello pages, update about page, and implement layout with Bulma CSS

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <h1>About Us</h1>
-<p>This is a sample Flask app deployed to Azure.</p>
+<p>This is a sample Flask app deployed to Azure.
+    <br>Forked from: https://github.com/Azure-Samples/msdocs-python-flask-webapp-quickstart
+</p>
 {% endblock %}
