--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,6 @@
 {% block content %}
 <h1>About Us</h1>
 <p>This is a sample Flask app deployed to Azure.
-    <br>Forked from: https://github.com/Azure-Samples/msdocs-python-flask-webapp-quickstart
+    <br>Initial app structure forked from: https://github.com/Azure-Samples/msdocs-python-flask-webapp-quickstart
 </p>
 {% endblock %}
